# Multi-Agent-Research-Tool

./: README.md  main.py  pyproject.toml  req.txt
agents/: readerAgent.py  searchAgent.py  trendingAgent.py
chains/: criticChain.py  factCheckerChain.py  plannerChain.py  writerChain.py
pipelines/: pipeline.py
tools/: webScapeTool.py  webSearchTool.py
