[project]
name = "react-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "langchain>=1.3.4",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.1",
    "langchain-groq>=1.1.2",
    "langchain-openai>=1.2.2",
    "langchain-openrouter>=0.2.3",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "rich>=15.0.0",
    "streamlit>=1.58.0",
    "tavily-python>=0.7.25",
]
